css/main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');

/* Global Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    outline: none;
    font-family: 'Poppins', sans-serif;
    color: var(--font-color);
}

/* Root Variables */
:root {
    --primary-color: #1f242d;
    --secondary-color: #323946;
    --accent-color: #2eb5d6;
    --font-color: #ffffff;
    --disabled-color: #fff3;
}

/* ---------- Base ---------- */
html {
    font-size: 62.5%;
}

body {
    background-color: white;
}

/* Navigation Bar */
header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 2rem 9% 3rem; /* top | left-right | bottom */
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}


.logo {
    color: var(--accent-color);
    font-size: 3rem;
    font-weight: 700;
    display: flex;
    align-items: center;
    gap: 1rem;
}

nav a {
    color: var(--font-color);
    font-size: 2rem;
    font-weight: 500;
    margin-left: 3.5rem;
    transition: color 0.5s;
}

nav a:hover,
nav a.active {
    color: var(--accent-color);
}

#menu-icon{
    font-size: 4rem;
    display: none;
}

/* Sections */
section {
    width: 100%;
    min-height: 100vh;
    padding: 10rem 9% 2rem;
    background-color: var(--primary-color);
}





/* ============================= */
/* GLOBAL BREAKPOINTS */
/* ============================= */

@media screen and (max-width: 1200px) {
    html {
        font-size: 55%;
    }
}

@media screen and (max-width: 992px) {
    header {
        padding: 2rem 4%;
    }

    section {
        padding: 10rem 4% 2rem;
    }
}

/* ============================= */
/* NAVIGATION */
/* ============================= */

@media screen and (max-width: 768px) {

    #menu-icon {
        display: block;
    }

    nav {
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        padding: 1rem 0;
        background: var(--primary-color);
        border-top: .1rem solid rgba(0,0,0,0.2);
        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.2);
        text-align: center;
        display: none;
    }

    nav.active {
        display: block;
    }

    nav a {
        display: block;
        margin: 4rem 0;
    }
}

@media screen and (max-width: 450px) {
    html {
        font-size: 50%;
    }
}

